--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,34 @@
-version: 2.1
+version: 2
 jobs:
-  build:
-    docker: 
-      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
+  deploy:
+    docker:
+      - image: google/cloud-sdk
     steps:
-      - checkout # check out the code in the project directory
-      - run: echo "hello world" # run the `echo` command
+      - checkout
+      - run:
+          name: Authorize GCloud Command Line Tool
+          command: |
+            echo $GCLOUD_SERVICE_KEY | base64 --decode | gcloud auth activate-service-account --key-file=-
+      - run:
+          name: Deploy To Google Cloud Functions
+          command: |
+            # Variables
+            FUNCTION_NAME=hello
+            ENTRYPOINT=hello
+            GCP_PROJECT=datapush
+            # Deploy command
+            gcloud functions deploy $FUNCTION_NAME \
+              --entry-point $ENTRYPOINT \
+              --runtime nodejs10 \
+              --trigger-http \
+              --source ./ \
+              --project $GCP_PROJECT
+workflows:
+  version: 2
+  build-test-and-deploy:
+    jobs:
+      - deploy:
+          filters:
+            branches:
+              only:
+                - master
