--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,68 @@
-version: 2
-jobs:
-  deploy:
+version: 2.1
+executors:
+  cloudsdk-executor:
     docker:
       - image: google/cloud-sdk
+
+commands:
+  gcloud_authenticate:
+    parameters:
+      gcp_project:
+        type: string
+    steps:
+      - run:
+          name: Authenticate with Service Account
+          command: |
+            echo $GCLOUD_SERVICE_KEY | base64 --decode > home/gcloud-service-key.json
+            gcloud config set component_manager/disable_update_check true
+            gcloud auth activate-service-account --key-file=home/gcloud-service-key.json
+            gcloud auth configure-docker --quiet
+            gcloud --quiet config set project << parameters.gcp_project >>
+           
+jobs:
+  deploy_adhoc_gcf:
+    parameters:
+      gcp_project:
+        type: string
+      trigger_topic:
+        type: string
+      function_name:
+        type: string
+    executor: cloudsdk-executor
     steps:
       - checkout
+      - run: mkdir home
+      - gcloud_authenticate:
+          gcp_project: << parameters.gcp_project >>
       - run:
-          name: Authorize GCloud Command Line Tool
+          name: creating .env.yml file for storing environment variables
           command: |
-            echo $GCLOUD_SERVICE_KEY | base64 --decode > ${HOME}/gcloud-service-key.json
-            gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
-      - run:
-          name: Deploy To Google Cloud Functions
+            cat \<< EOF > .env
+            DIGITAL_SFTP_HOST: ${DIGITAL_SFTP_HOST}
+            DIGITAL_SFTP_PRIVATE_KEY: ${DIGITAL_SFTP_PRIVATE_KEY}
+            EOF
+      - deploy:
+          name: Update Adhoc Function Deployment
+          environment:
+            GCP_PROJECT: << parameters.gcp_project >>
+            TRIGGER_TOPIC: << parameters.trigger_topic >>
+            FUNCTION_NAME: << parameters.function_name >>
           command: |
-            # Variables
-            FUNCTION_NAME=hello
-            ENTRYPOINT=hello
-            GCP_PROJECT=datapush
-            # Deploy command
-            gcloud functions deploy $FUNCTION_NAME \
-              --entry-point $ENTRYPOINT \
-              --runtime nodejs10 \
-              --trigger-http \
-              --source ./ \
-              --project $GCP_PROJECT
+            gcloud functions deploy $FUNCTION_NAME --entry-point hello --trigger-topic $TRIGGER_TOPIC --project $GCP_PROJECT --env-vars-file .env --runtime nodejs10
 workflows:
   version: 2
-  build-test-and-deploy:
+  deploy-gcf-dev:
     jobs:
-      - deploy:
+      - deploy_adhoc_gcf:
+          context: hello
+          gcp_project: datapush
+          trigger_topic: hello-dev
+          function_name: hello-dev
           filters:
+            tags:
+              ignore: /.*/
             branches:
-              only:
-                - master
+              only: master
+
+
+
