--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ commands:
       - run:
           name: Authenticate with Service Account
           command: |
-            echo $GCLOUD_SERVICE_KEY | base64 > key_file.json
+            echo $GCLOUD_SERVICE_KEY | base64 > ./key_file.json
             gcloud config set component_manager/disable_update_check true
             gcloud auth activate-service-account --key-file=./key_file.json
             gcloud auth configure-docker --quiet
